// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageReport Component should render null without props 1`] = `
<PanelLoading
  accent={false}
  minHeight="400px"
/>
`;

exports[`UsageReport Component should render with overages 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "What counts towards usage?",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/what-counts-daily-monthly-usage",
      },
    ]
  }
  title="Your Usage Report"
>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Since Aug 29 2017, 8:00pm"
      title="Today"
    />
    <ProgressBar
      completed={50}
      my="300"
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      primary={true}
    />
    <DisplayNumber
      content="2,000"
      label="Daily Limit"
    />
    <SendMoreCTA
      hasSendingLimits={true}
    />
  </Panel.Section>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Billing cycle: Aug 1 2017 - Aug 31 2017"
      title="This Month"
    />
    <ProgressBar
      completed={22}
      my="300"
    />
    <DisplayNumber
      content="11,000"
      label="Used"
      primary={true}
    />
    <DisplayNumber
      content="10,000"
      label="Included"
    />
    <DisplayNumber
      content="1,000"
      label="Extra Emails Used"
    />
    <DisplayNumber
      content="50,000"
      label="Monthly limit"
    />
  </Panel.Section>
</Panel>
`;

exports[`UsageReport Component should render with regular usage 1`] = `
<Panel
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "What counts towards usage?",
        "external": true,
        "to": "https://www.sparkpost.com/docs/getting-started/what-counts-daily-monthly-usage",
      },
    ]
  }
  title="Your Usage Report"
>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Since Aug 29 2017, 8:00pm"
      title="Today"
    />
    <ProgressBar
      completed={50}
      my="300"
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      primary={true}
    />
    <DisplayNumber
      content="2,000"
      label="Daily Limit"
    />
    <SendMoreCTA
      hasSendingLimits={true}
    />
  </Panel.Section>
  <Panel.Section>
    <ProgressLabel
      secondaryTitle="Billing cycle: Aug 1 2017 - Aug 31 2017"
      title="This Month"
    />
    <ProgressBar
      completed={2}
      my="300"
    />
    <DisplayNumber
      content="1,000"
      label="Used"
      primary={true}
    />
    <DisplayNumber
      content="10,000"
      label="Included"
    />
    <DisplayNumber
      content="50,000"
      label="Monthly limit"
    />
  </Panel.Section>
</Panel>
`;

exports[`UsageReport Component should render with regular usage 2`] = `
<div
  className="Display"
>
  <h5
    className="Content"
  />
  <h6
    className="Label"
  />
</div>
`;

exports[`UsageReport Component should render with regular usage 3`] = `
<Box
  display="inline-block"
  mr="500"
>
  <Text
    fontSize="400"
    fontWeight="medium"
  />
  <Text
    fontSize="200"
    fontWeight="light"
  />
</Box>
`;

exports[`UsageReport Component should render with regular usage 4`] = `
<div>
  <h5
    className="ProgressTitle"
  />
  <h6
    className="ProgressSecondary"
  />
</div>
`;

exports[`UsageReport Component should render with regular usage 5`] = `
<Box
  mb="200"
>
  <Inline>
    <Text
      fontSize="200"
      fontWeight="semibold"
    />
    <Text
      color="gray.600"
      fontSize="200"
      fontWeight="light"
    />
  </Inline>
</Box>
`;
